[tool.poetry]
name = "PoC"
version = "0.1.0"
description = ""
authors = ["jiho lee <optional.int@kakao.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bentoml = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
